# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml  schema.sql  tasks.py
.github/workflows/: ci.yml
data/: database.sqlite  schema.sql  test_database.sqlite
src/: RobotLibrary.py  cli.py  database_connection.py  database_setup.py  main.py
src/UI/: cli.py
src/entities/: blog.py  book.py  podcast.py  recommendation.py  video.py
src/repositories/: recommendation_repository.py
src/services/: console_io_service.py  recommendations_service.py
src/tests/: cli_test.py  recommendation_test.py  stub_io.py  test_cli.py
src/tests/UI/: cli_test.py
src/tests/entities/: blog_test.py  book_test.py  podcast_test.py  recommendation_test.py  video_test.py
src/tests/repositories/: recommendation_repository_test.py
src/tests/robot_tests/: add_recommendation.robot  add_recommendations.robot  edit_recommendations.robot  resource.robot
src/tests/services/: recommendation_service_test.py
