[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["Ryhma1"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
robotframework = "^4.1.2"
autopep8 = "^1.6.0"
pylint = "^2.12.1"
coverage = "^6.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
